--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ ul {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-weight: bolder;
+    background-color: white;
+    border: 0px;
+    border-radius: 50%;
   }
   
   li a:hover {
@@ -68,4 +72,11 @@ h3 {
 img {
     border: black;
     border-radius: 50%;
+}
+#contact {
+    text-align: left;
+}
+.number {
+    padding-left: 70px;
+    padding-bottom: 20px;
 }
